--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -119,7 +119,7 @@
 <body>
     <header>
         <!-- Logo on the Left -->
-        <img id="logo" src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="StudyFlow Logo">
+        <img id="logo" src="{{ url_for('static', filename='images/logo.png') }}" alt="StudyFlow Logo">
 
         <!-- Title in the Center -->
         <div class="title-container">
@@ -174,7 +174,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 StudyFlow Platform</p>
+        <p>© 2024 ServiceBase </p>
     </footer>
 </body>
 </html>
