--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -179,7 +179,7 @@
 
     <!-- Main Content -->
     <header>
-        <img id="logo" src="{{ url_for('static', filename='images/logo.png') }}" alt="StudyFlow Logo">
+        <img id="logo" src="{{ url_for('static', filename='StudyFlow Logo.png') }}" alt="StudyFlow Logo">
 
         <div class="title-container">
             <h1 class="title">StudyFlow</h1>
