--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -179,10 +179,10 @@
 
     <!-- Main Content -->
     <header>
-        <img id="logo" src="{{ url_for('static', filename='StudyFlow Logo.png') }}" alt="StudyFlow Logo">
+        <img id="logo" src="{{ url_for('static', filename='ServiceBase.png') }}" alt="ServiceBase">
 
         <div class="title-container">
-            <h1 class="title">StudyFlow</h1>
+            <h1 class="title">ServiceBase</h1>
         </div>
 
         <div class="button-container">
@@ -217,10 +217,10 @@
         </div>
 
         <div class="section" id="courses-section">
-            <h2>Courses</h2>
+            <h2>Forum</h2>
             <p>Add and save personal Courses from any institution.</p>
             <a href="{{ url_for('main.courses_page') }}">
-                <button>Go to Courses</button>
+                <button>Go to Forums</button>
             </a>
         </div>
     </div>
