--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Study Flow</title>
+    <title>ServiceBase</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -167,7 +167,6 @@
 <body>
 
     <!-- Side Panel Menu -->
-    <button class="toggle-btn" onclick="toggleMenu()">☰ Menu</button>
     <div id="sidePanel" class="side-panel">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('main.calendar_page') }}">Calendar</a>
