change title name

--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -188,7 +188,7 @@
         <img id="logo" src="{{ url_for('static', filename='images/ServiceBase.png') }}" alt="ServiceBase">
 
         <div class="title-container">
-            <h1 class="title">ServiceBase</h1>
+            <h1 class="title">ServiceBases</h1>
         </div>
 
         <div class="button-container">
@@ -232,7 +232,7 @@
     </div>
 
     <footer>
-        <p>© 2024 StudyFlow Platform</p>
+        <p>© 2024 ServiceBases Platform</p>
     </footer>
 
 </body>
