--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -179,7 +179,7 @@
         <a href="{{ url_for('main.calendar_page') }}">Calendar</a>
         <a href="{{ url_for('main.uploadNotes') }}">Notes</a>
         <a href="{{ url_for('main.uploadFiles') }}">Upload</a>
-        <a href="{{ url_for('main.courses_page') }}">Courses</a>
+        <a href="{{ url_for('main.courses_page') }}">Forum</a>
         <a href="#">Contact</a>
     </div>
 
