--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -177,8 +177,8 @@
     <div id="sidePanel" class="side-panel">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('main.calendar_page') }}">Calendar</a>
-        <a href="{{ url_for('main.uploadNotes') }}">Notes</a>
-        <a href="{{ url_for('main.uploadFiles') }}">Upload</a>
+        <a href="{{ url_for('main.uploadNotes') }}">Weekly Updates</a>
+        <a href="{{ url_for('main.uploadFiles') }}">Job Listings</a>
         <a href="{{ url_for('main.courses_page') }}">Forum</a>
         <a href="#">Contact</a>
     </div>
@@ -207,16 +207,16 @@
         </div>
 
         <div class="section" id="notes-section">
-            <h2>Notes</h2>
-            <p>Create and save personal notes for your classes.</p>
+            <h2>Weekly Updates</h2>
+            <p> Weekly Updates on ServiceBase upgrades & ideas.</p>
             <a href="{{ url_for('main.uploadNotes') }}">
-                <button>Go to Notes</button>
+                <button>Go to Weekly Updates</button>
             </a>
         </div>
 
         <div class="section" id="file-upload-section">
-            <h2>File Upload</h2>
-            <p>Upload your files here for easy access.</p>
+            <h2>Job Listings</h2>
+            <p>Jobs around you</p>
             <a href="{{ url_for('main.uploadFiles') }}">
                 <button>Go to Upload Form</button>
             </a>
