--- a/CEN-4010-Group-2-main/templates/index.html
+++ b/CEN-4010-Group-2-main/templates/index.html
@@ -218,7 +218,7 @@
             <h2>Job Listings</h2>
             <p>Jobs around you</p>
             <a href="{{ url_for('main.uploadFiles') }}">
-                <button>Go to Upload Form</button>
+                <button>Go to Job Listings</button>
             </a>
         </div>
 
