--- a/CEN-4010-Group-2-main/templates/login.html
+++ b/CEN-4010-Group-2-main/templates/login.html
@@ -2,10 +2,10 @@
 <html lang="en">
  <header>
         <div class="logo-container">
-            <img id="logo" src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="StudyFlow Logo">
+            <img id="logo" src="{{ url_for('static', filename='images/ServiceBase.png') }}" alt="ServiceBase Logo">
         </div>
         <div class="title-container">
-            <h1 class="title">StudyFlow</h1>
+            <h1 class="title">ServiceBase</h1>
         </div>
 </header>
 <head>
